assets/css/theme.css
/* ... */
@media (max-width: 767px) {
  .footer-meta .payments ul li {
    margin-left: 0;
    margin-right: 10px;
  }
}
/* 4.1 */
/* Main Slider / OwlCarousel
/* ========================================================================== */
.main-slider {
  height: 900px; /* Set the desired height for the main-slider */
  position: relative;
}

.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.video-container video {
  width: 100%;
  height: 100%;
  object-fit: cover; /* Ensure the video covers the entire container */
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
  display: none;
}

.video-container video.active {
  opacity: 1;
  display: block;
}

.intro-box {
  top: 30%;
  position: absolute;
  display: block;
  text-align: center;
  height: 100vh;
  margin: 0;
}

#dynamic-sentence {
  color: white;
  font-size: 60px;
  font-family: 'Bitter', serif;
  text-align: center;
  margin-bottom: -20px;
  letter-spacing: 0.02em;
}

#last-word {
  color: white;
  font-size: 90px;
  font-weight: bold; /* Optional: Make the last word bold */
  font-family: 'Outfit', sans-serif;
}

@media (max-width: 991px) {
  .video-container {
    max-height: 450px
  }

  .intro-box {
    position: absolute;
    display: block;
    text-align: center;
    height: 50vh;
    margin: 0;
  }

  #dynamic-sentence {
    font-size: 40px;
  }

  #last-word {
    font-size: 70px;
  }

  .main-slider {
    height: 500px;
  }

  .content-area {
    padding-top: 0;
  }
}

/* ----------------Tjänster------------------ */

.kund-text-presentation, .ovriga-text-presentation {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

.kund-text-presentation h3, .ovriga-text-presentation h3 {
  color: black;
  padding-left: 15px;
}

.tre-steg-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: auto;
  width: 100%;
  padding-top: 40px;
}

.ovriga-tjanster-box {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 400px;
}

.ovriga-tjanster-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: 280px;
  max-width: 80%;
}

#ovriga-button {
  flex: 0 1 auto;
  height: 120px;
  display: inline-flex;
  flex-direction: column;
  width: auto;
}
#ovriga-button h3 {
  margin: 0; /* Increased bottom margin */
  padding-right: 20px;
  font-size: 30px;
  color: white;
  font-weight: 500;
}

.service-btn-text-content {
  width: 100%;
}

.custom-button {
  background: none;
  border: none;
  padding: 0;
  margin: 10px;
  cursor: pointer;
  position: relative;
  width: 400px; /* Adjust as needed */
  height: 300px; /* Adjust as needed */
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 3px;
}

.custom-button:last-child {
  margin-bottom: 30px;
}

.custom-button::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.541); /* Adjust opacity as needed */
  transition: background-color 0.3s ease;
}

.custom-button img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.3s ease;
}

.custom-button:hover img {
  transform: scale(1.15);
}

.custom-button .service-btn-text-content{
  position: relative; /* Changed from absolute */
  z-index: 2; /* Ensure text is above the overlay */
  text-align: center;
  width: 90%;
  color: white; /* Set text color to white */
}

.custom-button h3 {
  margin: 0 0 10px 0; /* Increased bottom margin */
  padding: 0;
  font-size: 40px;
  color: white;
  font-weight: 600;
}

.custom-button p {
  margin: 0;
  padding: 0;
  font-size: 18px; /* Adjust as needed */
}

@media screen and (max-width: 768px) {
  .tre-steg-container {
    padding-top: 50px;
    flex-direction: column;
    height: auto;
    width: auto;
  }
  #tjanster-container {
    padding-top: 0;
  }
  .ovriga-tjanster-box {
    height: auto;
  }
  .ovriga-tjanster-container {
    padding-top: 20px;
    height: auto;
    gap: 0px 20px;
    max-width: 100%;
  }

  .custom-button {
    width: 90%; /* Make buttons wider on mobile */
    max-width: 300px; /* But not too wide */
    height: 150px; /* You might want to adjust the height for mobile */
    margin: 10px 0; /* Vertical margin between stacked buttons */
  }

  .custom-button::after {
    background-color: rgba(0, 0, 0, 0.39); /* Adjust opacity as needed */
  }
}


.service-header {
  width: 100%;
  height: 450px;
  position: relative;
}

#service-header-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#service-header-container {
  position: absolute;
  top: 0; 
  left: 50px;
  height: 450px;
  width: 530px;
}

#service-header-mark {
  padding-top: 40px;
  color: black;
  font-family: 'Bitter', serif;
}

#under-line {
  height: 3px;
  width: 100px;
  background-color: var(--bjbil-orange);
}

#service-header-title {
  padding-top: 30px;
  color: black;
  font-size: 80px;
  font-weight: 900;
}

#service-header-content {
  font-family: 'Outfit', sans-serif;
  padding-top: 20px;
  font-size: 18px;
}

.service-content {
  padding-top: 50px;
  width: 60%;
  margin: 0 auto;
  height: auto;
  font-size: 22px;
  padding-bottom: 50px;
  font-family: 'Bitter', serif;
}

/* .main-slider .owl-theme .owl-controls {
  margin: 0 !important;
}
@media (max-width: 639px) {
  .main-slider .owl-theme .owl-controls {
    display: none;
  }
}
.main-slider .owl-theme .owl-controls .owl-nav [class*=owl-] {
  position: absolute;
  top: 45%;
  margin: -20px 0 0 0;
  padding: 0;
  width: 60px;
  height: 60px;
  border-radius: 0;
  font-size: 50px;
  line-height: 30px;
  border: solid 0px #232323;
  background: transparent;
  color: #fff;
}
/* ... */

